# colubridae

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  biglang.cabal  cabal.project.local  colubridae.cabal  extract_from_constructor.ll  flake.nix  fourmolu.yaml  pattern_match.ll  todo.md
app/: Main.hs  Options.hs
planning/: planning.typ  settings.typ
programs/: break-bug.cb  example1.cb  example2.cb  list.cb  patmatchbreak.cb  test.cb
report/: report.typ  settings.typ
src/: Compile.hs  Equality.hs  Language.hs  Names.hs  Options.hs  Origin.hs  Parse.hs  Rename.hs  Types.hs  Utils.hs
src/Backend/: Types.hs
src/Backend/Desugar/: Basic.hs  Breaks.hs  Desugar.hs  Pretty.hs  Types.hs
src/Backend/Llvm/: Llvm.hs  Monad.hs  Prelude.hs  ToLlvm.hs  Types.hs
src/Frontend/: Builtin.hs  Error.hs  StatementCheck.hs  TH.hs  Tc.hs  Types.hs
src/Frontend/Mut/: Mut.hs  Types.hs
src/Frontend/Parser/: Parse.hs  Types.hs  Utils.hs
src/Frontend/Renamer/: Monad.hs  Pretty.hs  Rn.hs  Types.hs
src/Frontend/Typechecker/: Ctx.hs  Pretty.hs  Subst.hs  Tc.hs  Types.hs
src/Parser/: Parse.hs  Types.hs  Utils.hs
src/Renamer/: Error.hs  Monad.hs  Rn.hs  TH.hs  Types.hs
test/: Main.hs
test/bad/: duplicate_arg.cb  duplicate_con.cb  duplicate_def.cb  duplicate_lamarg.cb  duplicate_pat.cb  ex1.cb  ex2.cb  ex3.cb  ex4.cb  ex5.cb  ex6.cb  ex7.cb
test/good/: adt1.cb  adt2.cb  adt2.out  adt3.cb  ex1.cb  ex10.cb  ex11.cb  ex12.cb  ex13.cb  ex14.cb  ex14.out  ex15.cb  ex15.out  ex16.cb  ex17.cb  ex18.cb  ex19.cb  ex2.cb  ex20.cb  ex21.cb  ex22.cb  ex3.cb  ex4.cb  ex5.cb  ex6.cb  ex7.cb  ex8.cb  ex9.cb  ex9.out  expr.cb  patternmatch1.cb  patternmatch1.out  patternmatch2.cb  patternmatch2.out  patternmatch3.cb  patternmatch3.out  patternmatch4.cb  patternmatch4.out  patternmatch5.cb  patternmatch6.cb
