cabal-version:   3.0
name:            biglang
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          sebastianselander
maintainer:      sebastian.selander@gmail.com

-- copyright:
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

common extensions
  default-extensions: NoImplicitPrelude

library
  import:           warnings, extensions
  exposed-modules:
    Language
    Parse

  build-depends:
    , megaparsec
    , relude
    , syb
    , parser-combinators

  hs-source-dirs:   src
  default-language: GHC2021

executable biglang
  import:           warnings, extensions
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , biglang
    , relude

  hs-source-dirs:   app
  default-language: GHC2021

test-suite biglang-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base     ^>=4.18.2.1
    , biglang
