cabal-version:   3.0
name:            colubridae
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          sebastianselander
maintainer:      sebastian.selander@gmail.com

-- copyright:
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wno-name-shadowing

common extensions
  default-extensions: NoImplicitPrelude

library
  import:           warnings, extensions
  exposed-modules:
    Parser.Parse
    Parser.Types
    Parser.Utils
    Renamer.Monad
    Renamer.Rn
    Renamer.Types
    Renamer.Error
    Renamer.TH
    Equality
    Types
    Utils

  build-depends:
    , base
    , containers
    , megaparsec
    , parser-combinators
    , relude
    , syb
    , mtl
    , template-haskell
    , extra
    , lens

  hs-source-dirs:   src
  default-language: GHC2021

executable colubridae
  import:           warnings, extensions
  main-is:          Main.hs
  build-depends:
    , colubridae
    , pretty-simple
    , relude

  hs-source-dirs:   app
  default-language: GHC2021

test-suite colubridae-test
  import:           warnings
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , colubridae
