cabal-version:   3.0
name:            colubridae
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          sebastianselander
maintainer:      sebastian.selander@gmail.com

-- copyright:
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wno-name-shadowing

common extensions
  default-extensions: NoImplicitPrelude

library
  import:           warnings, extensions
  exposed-modules:
    Backend.Desugar.Basic
    Backend.Desugar.Breaks
    Backend.Desugar.Desugar
    Backend.Desugar.Pretty
    Backend.Desugar.Types
    Backend.Llvm.Llvm
    Backend.Llvm.Monad
    Backend.Llvm.Prelude
    Backend.Llvm.ToLlvm
    Backend.Llvm.Types
    Compile
    Frontend.Builtin
    Frontend.Error
    Frontend.Parser.Parse
    Frontend.Parser.Types
    Frontend.Parser.Utils
    Frontend.Renamer.Monad
    Frontend.Renamer.Rn
    Frontend.Renamer.Types
    Frontend.Renamer.Pretty
    Frontend.StatementCheck
    Frontend.TH
    Frontend.Typechecker.Tc
    Frontend.Typechecker.Types
    Frontend.Typechecker.Ctx
    Frontend.Typechecker.Pretty
    Frontend.Types
    Names
    Rename
    Origin
    Utils
    Options

  build-depends:
    , base
    , containers
    , dlist
    , extra
    , lens
    , megaparsec
    , monad-validate
    , mtl
    , parser-combinators
    , pretty-simple
    , prettyprinter
    , relude
    , string-interpolate
    , syb
    , template-haskell
    , optparse-applicative

  hs-source-dirs:   src
  default-language: GHC2021

executable colubridae
  import:           warnings, extensions
  main-is:          Main.hs
  build-depends:
    , colubridae
    , pretty-simple
    , relude

  hs-source-dirs:   app
  default-language: GHC2021

test-suite colubridae-test
  import:           warnings, extensions
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , colubridae
    , directory
    , filepath
    , process
    , relude
